--- a/assets/po/gl_ES.po
+++ b/assets/po/gl_ES.po
@@ -251,7 +251,7 @@ msgstr "Sair"
 
 #: menu/mainpage.py:132
 msgid "Note: the game is work-in-progress"
-msgstr "Nota: o xogo está en desenrolo"
+msgstr "Nota: este xogo está en desenvolvimento"
 
 #: menu/mainpage.py:169 menu/mainpage.py:172
 msgid "Last news:"
